# todo

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  ruff.toml  ty.toml
.github/: pull_request_template.md
src/: bootstrap.py  main.py
src/cli/: cli.py  commands.py  commands_legacy.py  registry.py  state.py
src/cli/commands/: add_task.py  flow_update.py  interactive.py  list_tasks.py  print_task_summary.py  remove_task.py
src/enums/: priority_enum.py  status_enum.py
src/schemas/: todo_schema.py  todolist_schema.py
src/schemas/guards/: todo_dict_guard.py  todo_list_dict_guard.py
src/task/: task.py
src/todo_list/: todo_list.py
src/ui/: prompts.py  tables.py
tests/: conftest.py  test_main.py
tests/cli/: test_registry.py  test_state.py  test_typer_e2e.py
tests/cli/commands/: conftest.py  test_add_task.py  test_flow_update.py  test_interactive.py  test_list_tasks.py  test_print_task_summary.py  test_remove_task.py  test_state.py
tests/schemas/guards/: test_todo_dict_guard.py  test_todo_list_dict_guard.py
tests/task/: test_add_tag.py  test_clone.py  test_format.py  test_remove_tag.py  test_repr.py  test_str.py  test_tags.py  test_to_and_from_dict.py  test_to_and_from_json.py  test_todo.py  test_todo_normalization.py  test_todolist.py
tests/todo_list/: conftest.py  test_add.py  test_collection_protocol.py  test_filter_by.py  test_get.py  test_remove.py  test_sort.py  test_to_and_from_dict.py  test_to_and_from_json.py
tests/ui/: test_prompts.py  test_tables.py
